# resume-chatbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.manual  Dockerfile.minimal  Dockerfile.prod  Dockerfile.railway  Dockerfile.simple  README.md  app.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  railway-docker.json  railway.json  render.yaml  requirements.txt  run.py  start.py
selfinfo/: summary.txt
static/: index.html  script.js  style.css
